   * Fix for "Remove text for HI" - thx Lynton
   * Fix list view focus after video fullscreen - thx OmrSi
   * Fix File -> Open (Keep Video)... - thx Kolle
   * Fix error when using Regex replace - thx OmrSi/mkver
   * Fix list view line focus issue - thx OmrSi
   * Fix text box size in RTL mode after closing original - thx OmrSi
   * Fix issue with last line in some .smi files - thx Rex
   * Fix "Move start/end 100 ms back/forward - thx OmrSi
   * Fix for "Fix (remove dash) lines beginning w dash" - thx OmrSi


3.5.6 (27th February 2018)
* NEW:
   * Some support for SMPTE time code (drop frame) in video player
   * Shortcuts for moving text up/down in current sub - thx Leon
   * Shortcut for "Unbreak without space" (for CJK) - thx Leon
   * Split by cursor/video pos - thx Leon
   * Add support for FCP xml 1.7
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx ZityiSoft Team
   * Update Korean translation - thx domddol
   * Update Turkish translation - thx Falcon006
   * Update Portuguese translation - thx moob
   * Waveform insert sub now works not just at end - thx Leon
   * Allow larger "margin" in SSA/ASSA styles - thx von Suppé
   * Export to images alignment option "Center, left justify" - thx Shota 
   * Add "only if on separate line" option for "Remove interjections" - thx darnn
   * Start with uppercase letter after title in "Change casing" - thx 791
   * Support more formats in "Import time codes from subtitles" - thx Ninelpienel 
   * Add option to ignore formatting in compare - thx mkver
   * Boost volume for vlc/mpv - thx Mohammad
   * Import/Export Multiple replace groups
   * Add more steps to "Play rate" + shortcuts - thx  darnn/Leon
* FIXED:
   * Fix downloading mpv/plugins/tesseract-dictionaries
   * Fix Ctrl+p of time code in "Time code control" (regr. from 3.5.5) - thx Mohammed
   * Fix for format "TTML draft 2006-10" - thx thehulk