@@ -53,8 +53,9 @@
    * Fix list view line focus issue - thx OmrSi
    * Fix text box size in RTL mode after closing original - thx OmrSi
    * Fix issue with last line in some .smi files - thx Rex
-   * Fix "Move start/end 100 ms back/forward - thx OmrSi
+   * Fix "Move start/end 100 ms back/forward" - thx OmrSi
    * Fix for "Fix (remove dash) lines beginning w dash" - thx OmrSi
+   * Fix changed status for non utf-8 files - thx OmrSi/mkver
 
 
 3.5.6 (27th February 2018)
